fix: slide flickering

--- a/styles/index.css
+++ b/styles/index.css
@@ -136,17 +136,9 @@
     height: 450px;
     flex-shrink: 0;
     @media screen and (max-width: 600px) {
-      width: 100%;
-      height: 100%;
-      aspect-ratio: 2/3;
-    }
-  }
-
-  @supports (hanging-punctuation: first) and (font: -apple-system-body) and (-webkit-appearance: none) {
-    .card-aspect-ratio {
-      @media screen and (max-width: 600px) {
-        aspect-ratio: 1.35/2;
-      }
+      --width: calc(100vw - 1rem);
+      width: var(--width);
+      height: calc(var(--width) * 3 / 2);
     }
   }
 }
